Fixed play button image not updating properly when selecting new track. Fixed track titles overflowing onto new lines (it scrolls instead).

--- a/styles/main.css
+++ b/styles/main.css
@@ -355,6 +355,13 @@ input:checked+.slider:before {
 	transform: translate(19px, 1px);
 }
 
+/* SCROLLING TEXT
+------------------------- */
+.scrollable-text {
+	position: absolute;
+	white-space: nowrap;
+}
+
 /* TAG-IT STYLING
 ------------------------- */
 ul.tagit {
